...
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choice_one">Choice 1</string>
    <string name="choice_two">Choice 2</string>
    <string name="choice_three">Choice 3</string>
    <string name="choice_about">About</string>
    <string name="snackbar_item_one">You selected item 1</string>
    <string name="about_message">Version 1.0, by Daniel</string>
    <string name="dialog_back_title">Do you want to go back?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_message_hint">New Message</string>

...
