<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialogImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_dialog" />

    <EditText
        android:id="@+id/editNewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_message_hint"
        android:inputType="text" />

</LinearLayout>